# USB-Toolkit

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  run.bat  setup.bat  shell.bat
src/: libusb-1.0.rar  test_usb.py  usb_handshake_capture.py  whats_usb.py
src/usb_toolkit/: __init__.py  __main__.py  app.py  monitor.py
src/usb_toolkit/core/: __init__.py  audit.py  backend.py  baseline.py  decode.py  events.py  heuristics.py  ids.py  libusb_deploy.py  models.py  names.py  serialize.py  win_names.py
src/usb_toolkit/ui/: __init__.py  inspector.py  main_window.py  monitor_view.py  posture.py  selftest.py  theme.py
tests/: test_backend_ids_ui.py  test_decode.py  test_events_audit.py  test_libusb_deploy.py  test_monitor.py  test_monitor_naming.py  test_names.py  test_posture.py
